<resources>
    <string name="app_name">Champp</string>
    <string name="welcome">Welcome to the Champ Manager App!</string>
    <string name="newChamp">New Championship</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_champ">New Championship</string>
    <string name="name">Name: </string>
    <string name="modal">Modal</string>
    <string name="champ_individual">Individual</string>
    <string name="champ_group">Group</string>
    <string name="champ_cup">Cup</string>
    <string name="champ_league">League</string>
    <string name="ok">Ok</string>
    <string name="participante_emptyName">participant Empty Name </string>
    <string name="integrant_emptyName">integrant Empty Name </string>
    <string name="type_modality">Type of the Modality:</string>
    <string name="type_of_competition">Type of competition:</string>
    <string name="title_activity_my_champs">My Champs</string>

    <string name="hello_world">Hello world!</string>
    <string name="bt_myChamps">My Championships</string>
    <string name="title_activity_my_champ">My Champ</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_champ_characteristics">Champ Characteristics</string>
    <string name="noChamps">No championships</string>
    <string name="sameChamp">Championship with same name already exists</string>
    <string name="champDeleted">Successfully Deleted Championship</string>
    <string name="participantDeleted">Successfully Deleted Participant</string>
    <string name="fieldEmpty">Complete all fields</string>
    <string name="btnDelete">Delete</string>
    <string name="title_activity_add_participant">Add Participant</string>
    <string name="cancel">Cancel</string>
    <string name="deleteChampsDialog">Are you sure you want to delete this league?</string>
    <string name="deleteParticipanteDialog">Are you sure want to delete the participant ?</string>


<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_participant_characteristcs">Participant Characteristcs</string>
    <string name="name_participant" />
    <string name="init_champ">Start Championship</string>
    <string name="title_activity_championship">ChampionshipActivity</string>
    <string name="btn_table">Show Table</string>
    <string name="title_activity_cup">Cup</string>
    <string name="title_activity_league">League</string>
    <string name="champStarted">The Championship has started</string>
    <string name="participantCreated">Participant Created</string>
    <string name="integrantCreated">Integrant Created</string>
    <string name="sameName">There is already a participant of the same name</string>
    <string name="champUnstarted">Add at least 2 participants</string>
    <string name="table">Table</string>
    <string name="title_activity_add_integrant">Add Integrant</string>
    <string name="champDelete">Champ delet</string>

    <string name="setScoreDialog">Are you sure want to change the score? You can no longer change it.</string>
    <string name="setScoreDialogTitle">Change Score</string>
    <string name="title_activity_campeao">Champion</string>
     <string name="title_activity_ranking">RankingActivity</string>
    <string name="title_activity_logo">logoActivity</string>


    <string-array name="modal_array">
        <item>Futebol</item>
        <item>Vôlei</item>
        <item>Tênis</item>
        <item>Futsal</item>
        <item>Outro</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>

    <string name="facebook_app_id"></string>
    <string name="title_activity_modal">ModalActivity</string>
    <string name="select_modal_tv">Select The Championship Modality</string>
    <string name="basketball">basketball</string>
    <string name="football">football</string>
    <string name="futsal">futsal</string>
    <string name="handball">handball</string>
    <string name="tennis">tennis</string>
    <string name="volley">volleyball</string>

    <string name="congrat">Congratulations </string>
    <string name="youWin"> Você é o novo campeão do(a) </string>
    <string name="validField">Insira valores válidos nos campos de resultado</string>
    <string name="charExceeded">Character Limit Exceeded</string>
    <string name="champion">CHAMPION!</string>

</resources>
