<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/verde"
    tools:context="com.asus.embedded.champp.ModalActivity">

    <TextView
        android:text="@string/select_modal_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/textView3" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="6"
        android:layout_gravity="center"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/basketball_ib"
            android:src="@mipmap/basketball"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="select"/>

        <TextView
            android:text="@string/basquete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/football_ib"
            android:src="@mipmap/football"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="select"/>

        <TextView
            android:text="@string/football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/futsal_ib"
            android:src="@mipmap/futsal"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="select"/>

        <TextView
            android:text="@string/futsal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_horizontal" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/handball_ib"
            android:src="@mipmap/handball"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="select"/>

        <TextView
            android:text="@string/handball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="center_horizontal" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tennis_ib"
            android:src="@mipmap/tennis"
            android:layout_row="4"
            android:layout_column="0"
            android:onClick="select"/>

        <TextView
            android:text="@string/tennis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="center_horizontal" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/volley_ib"
            android:src="@mipmap/volley"
            android:layout_row="4"
            android:layout_column="1"
            android:onClick="select"/>

        <TextView
            android:text="@string/volley"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_gravity="center_horizontal" />

    </GridLayout>

</RelativeLayout>
