<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.asus.embedded.champp.ChampCharacteristicsActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/name"
        android:textColor="@color/primary_material_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/name_tv"/>

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/modal"
        android:textColor="@color/primary_material_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/name_tv"/>

    <TextView
        android:id="@+id/modal_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_champ"
        android:id="@+id/buttonInitChamp"
        android:onClick="initChamp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_table"
        android:id="@+id/buttonShowTable"
        android:onClick="showTable"/>
<!--
    <TextView
        android:text="@string/modal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/modal_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/type_modality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/type_modality_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/type_of_competition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/type_of_competition_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

-->

    <ListView
        android:id="@+id/participants_list_view"
        android:layout_width="wrap_content"
        android:layout_height="277dp" />

</LinearLayout>
